Add feature flag for ID.me.

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -99,6 +99,7 @@
     "enableEraCommons": true,
     "unsafeAllowSelfBypass": true,
     "unsafeAllowUserCreationFromGSuiteData": true,
+    "enableRasIdMeLinking": true,
     "enableRasLoginGovLinking": true,
     "currentDuccVersions": [3, 4, 5],
     "renewal": {
