--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -99,6 +99,7 @@
     "enableEraCommons": true,
     "unsafeAllowSelfBypass": false,
     "unsafeAllowUserCreationFromGSuiteData": false,
+    "enableRasIdMeLinking": false,
     "enableRasLoginGovLinking": true,
     "currentDuccVersions": [3, 4],
     "renewal": {
