--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -120,7 +120,7 @@
     "enableCromwellGKEApp": true,
     "enableRStudioGKEApp": true,
     "enableDataExplorer": true,
-    "enableTanagra": false
+    "enableTanagra": true
   },
   "actionAudit": {
     "logName": "workbench-action-audit-local",
