--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4770,11 +4770,11 @@ definitions:
       enableRasIdMeLinking:
         type: boolean
         default: false
-        description: Whether users are required to link their RAS/ID.me account to AoU
+        description: Whether users are given the option to link their RAS/ID.me account to AoU
       enableRasLoginGovLinking:
         type: boolean
         default: false
-        description: Whether users are required to link their RAS/login.gov account to AoU
+        description: Whether users are given the option to link their RAS/Login.gov account to AoU
       enableGenomicExtraction:
         type: boolean
         default: false
