DT-443 adding menu item for variant search

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4415,6 +4415,7 @@ definitions:
     - WHOLE_GENOME_VARIANT
     - LR_WHOLE_GENOME_VARIANT
     - STRUCTURAL_VARIANT_DATA
+    - SNP_INDEL_VARIANT
     - ZIP_CODE_SOCIOECONOMIC
     - ARRAY_DATA
     - CONCEPT_SET
