Renamed login.gov to identity.

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -5443,7 +5443,7 @@ definitions:
     - CT_COMPLIANCE_TRAINING
     - ERA_COMMONS
     - TWO_FACTOR_AUTH
-    - RAS_LINK_LOGIN_GOV
+    - IDENTITY
     - PROFILE_CONFIRMATION
     - PUBLICATION_CONFIRMATION
   AccessBypassRequest:
