--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -9794,15 +9794,14 @@ definitions:
       professionalUrl:
         type: string
         description: User's URL at primary place of work.
-      rasLoginGovBypassTime:
+      identityBypassTime:
         type: string
         format: date-time
-        description: Time an administrator bypassed the RAS Login.gov requirement
-          for this user.
-      rasLoginGovCompletionTime:
+        description: Time an administrator bypassed the identity requirement for this user.
+      identityCompletionTime:
         type: string
         format: date-time
-        description: Time user completed the RAS Login.gov account link.
+        description: Time user completed the identity account link.
       twoFactorAuthBypassTime:
         type: string
         format: date-time
