--- a/ui/package.json
+++ b/ui/package.json
@@ -89,14 +89,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "^14.4.3",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "concurrently": "^8.0.1",
     "enzyme": "^3.11.0",
-    "eslint": "^8.17.0",
+    "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-jest": "^27.1.6",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
@@ -112,7 +112,6 @@
   "resolutions": {
     "node-fetch": "^2.6.7",
     "nth-check": "^2.0.1",
-    "semver": "^7.5.2",
-    "word-wrap": "aashutoshrathi/word-wrap"
+    "semver": "^7.5.2"
   }
 }
