Add login.gov and id.me back in for safety.

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -5442,6 +5442,8 @@ definitions:
     - COMPLIANCE_TRAINING
     - CT_COMPLIANCE_TRAINING
     - ERA_COMMONS
+    - RAS_LINK_LOGIN_GOV
+    - RAS_LINK_ID_ME
     - TWO_FACTOR_AUTH
     - IDENTITY
     - PROFILE_CONFIRMATION
