Add a new access module to test if the system can handle this change

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -5479,6 +5479,7 @@ definitions:
     - RAS_LINK_ID_ME
     - PROFILE_CONFIRMATION
     - PUBLICATION_CONFIRMATION
+    - TEST_MODULE
   AccessBypassRequest:
     type: object
     required:
