Set enableRStudioGKEApp and showNewAnalysisTab to true on Staging

--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -118,7 +118,7 @@
     "enablePrivateDataprocWorker": true,
     "ccSupportWhenAdminLocking": false,
     "enableCromwellGKEApp": true,
-    "enableRStudioGKEApp": false,
+    "enableRStudioGKEApp": true,
     "enableDataExplorer": false,
     "enableTanagra": false
   },
