Show deleted workspaces in workspace-admin different sources for WorkspaceMapper

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -9610,6 +9610,8 @@ components:
             $ref: '#/components/schemas/WorkspaceUserAdminView'
         resources:
           $ref: '#/components/schemas/AdminWorkspaceResources'
+        activeStatus:
+          $ref: '#/components/schemas/WorkspaceActiveStatus'
       description: Admin-visible metadata about a workspace.
     AdminWorkspaceResources:
       type: object
