DT-467 adding tanagra base url in all envs

--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -169,5 +169,8 @@
   },
   "termsOfService": {
     "latestAouVersion": 1
+  },
+  "tanagra": {
+    "baseUrl": "https:\/\/aou-tanagra.dev.pmi-ops.org"
   }
 }
