--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -152,5 +152,8 @@
   },
   "termsOfService": {
     "latestAouVersion": 1
+  },
+  "tanagra": {
+    "baseUrl": "https:\/\/aou-tanagra.dev.pmi-ops.org"
   }
 }
