--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -175,5 +175,8 @@
   },
   "termsOfService": {
     "latestAouVersion": 1
+  },
+  "tanagra": {
+    "baseUrl": "https:\/\/aou-tanagra.dev.pmi-ops.org"
   }
 }
