DT-470 adding tanagra flag to CDR
rebasing file.

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4592,6 +4592,8 @@ definitions:
         type: boolean
       bigqueryDataset:
         type: string
+      tanagraEnabled:
+        type: boolean
   DomainCard:
     type: object
     required:
