--- a/api/src/main/resources/leonardo.yaml
+++ b/api/src/main/resources/leonardo.yaml
@@ -1497,6 +1497,7 @@ components:
         - CUSTOM
         - GALAXY
         - RSTUDIO
+        - ALLOWED
     AppStatus:
       type: string
       enum:
