--- a/ui/package.json
+++ b/ui/package.json
@@ -34,7 +34,7 @@
     "@fortawesome/pro-regular-svg-icons": "^6.1.2",
     "@fortawesome/pro-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@terra-ui-packages/components": "^0.0.2",
+    "@terra-ui-packages/components": "0.0.4",
     "@types/color": "^3.0.2",
     "@types/enzyme": "^3.10.10",
     "@types/jest": "^27.5.1",
