--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -101,7 +101,7 @@
     "unsafeAllowUserCreationFromGSuiteData": false,
     "enableRasIdMeLinking": false,
     "enableRasLoginGovLinking": true,
-    "currentDuccVersions": [3, 4],
+    "currentDuccVersions": [3, 4, 5],
     "renewal": {
       "expiryDays": 365,
       "expiryDaysWarningThresholds": [1, 7, 15],
