DT-479 removing feature flag for enableTanagra

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -118,8 +118,7 @@
     "enablePrivateDataprocWorker": true,
     "ccSupportWhenAdminLocking": false,
     "enableRStudioGKEApp": true,
-    "enableDataExplorer": true,
-    "enableTanagra": true
+    "enableDataExplorer": true
   },
   "actionAudit": {
     "logName": "workbench-action-audit-local",
