--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -118,8 +118,7 @@
     "enablePrivateDataprocWorker": false,
     "ccSupportWhenAdminLocking": true,
     "enableRStudioGKEApp": false,
-    "enableDataExplorer": false,
-    "enableTanagra": false
+    "enableDataExplorer": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-prod",
