--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -133,9 +133,7 @@
   },
   "rdrExport": {
     "host": "pmi-drc-api-test.appspot.com",
-    "queueName": "rdrExportQueue",
-    "exportObjectsPerTask": 10,
-    "exportDemoSurveyV2": true
+    "exportObjectsPerTask": 10
   },
   "captcha": {
     "enableCaptcha": false,
