--- a/ui/package.json
+++ b/ui/package.json
@@ -2,6 +2,7 @@
   "name": "aou-ui",
   "version": "0.0.2",
   "license": "BSD",
+  "type": "module",
   "scripts": {
     "build-terra-deps": "./src/terraui/build.sh",
     "deps": "yarn run codegen && yarn run build-terra-deps",
