--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -117,6 +117,7 @@
     "enablePrivateDataprocWorker": false,
     "ccSupportWhenAdminLocking": true,
     "enableRStudioGKEApp": false,
+    "enableSasGKEApp": false,
     "enableDataExplorer": false
   },
   "actionAudit": {
