--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -117,6 +117,7 @@
     "enablePrivateDataprocWorker": true,
     "ccSupportWhenAdminLocking": true,
     "enableRStudioGKEApp": true,
+    "enableSasGKEApp": false,
     "enableDataExplorer": false
   },
   "actionAudit": {
