--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -117,6 +117,7 @@
     "enablePrivateDataprocWorker": true,
     "ccSupportWhenAdminLocking": false,
     "enableRStudioGKEApp": false,
+    "enableSasGKEApp": false,
     "enableDataExplorer": false
   },
   "actionAudit": {
