--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4886,6 +4886,10 @@ definitions:
         type: boolean
         default: false
         description: Whether users are able to use the RStudio GKE app.
+      enableSasGKEApp:
+        type: boolean
+        default: false
+        description: Whether users are able to use the SAS GKE app.
       enableDataExplorer:
         type: boolean
         default: false
@@ -6519,6 +6523,7 @@ definitions:
     enum:
       - CROMWELL
       - RSTUDIO
+      - SAS
   DiskStatus:
     type: string
     enum:
