--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -2282,36 +2282,27 @@ paths:
           description: A list of cohort definitions.
           schema:
             "$ref": "#/definitions/CohortReviewListResponse"
-  "/v1/workspaces/{workspaceNamespace}/{workspaceId}/cohort-reviews/{cohortId}":
+  "/v1/workspaces/{workspaceNamespace}/{workspaceId}/cohort-reviews/{id}":
     parameters:
       - "$ref": "#/parameters/workspaceNamespace"
       - "$ref": "#/parameters/workspaceId"
-      - in: path
-        name: cohortId
-        type: integer
-        format: int64
-        required: true
-        description: cohort primary key
     get:
       tags:
         - cohortReview
       description: Returns all cohort reviews per cohortId
       operationId: getCohortReviewsByCohortId
+      parameters:
+      - in: path
+        name: id
+        type: integer
+        format: int64
+        required: true
+        description: cohort primary key
       responses:
         200:
           description: A list of cohort reviews.
           schema:
             "$ref": "#/definitions/CohortReviewListResponse"
-  "/v1/workspaces/{workspaceNamespace}/{workspaceId}/cohort-reviews/{cohortReviewId}":
-    parameters:
-    - "$ref": "#/parameters/workspaceNamespace"
-    - "$ref": "#/parameters/workspaceId"
-    - in: path
-      name: cohortReviewId
-      type: integer
-      format: int64
-      required: true
-      description: specifies which cohort review
     patch:
       tags:
       - cohortReview
@@ -2321,6 +2312,12 @@ paths:
         are omitted will not be modified'
       operationId: updateCohortReview
       parameters:
+      - in: path
+        name: id
+        type: integer
+        format: int64
+        required: true
+        description: specifies which cohort review
       - in: body
         name: cohortReview
         description: cohort review
@@ -2336,6 +2333,13 @@ paths:
       - cohortReview
       description: Deletes the cohort review with the specified ID
       operationId: deleteCohortReview
+      parameters:
+      - in: path
+        name: id
+        type: integer
+        format: int64
+        required: true
+        description: specifies which cohort review
       responses:
         202:
           description: ACCEPTED
