--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4381,7 +4381,7 @@ paths:
       - diskAdmin
       description:  Deletes a disk as an admin. Requires the
         RESEARCHER_DATA_VIEW authority.
-      operationId: deleteDisk
+      operationId: adminDeleteDisk
       responses:
         200:
           description: success
