Added recentlyModifiedId to WorkspaceResource.

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -7104,6 +7104,9 @@ definitions:
       - lastModifiedEpochMillis
       - adminLocked
     properties:
+      recentlyModifiedId:
+        type: integer
+        format: int64
       workspaceId:
         type: integer
         format: int64
