--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -32,6 +32,7 @@ RUN wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud
   tar -xf gcloud.tgz && \
   ./google-cloud-sdk/install.sh  --quiet && \
   ./google-cloud-sdk/bin/gcloud components install app-engine-java && \
+  ./google-cloud-sdk/bin/gcloud init && \
   rm -rf gcloud.tgz
 
 ENV PATH=~/node/bin:~/google-cloud-sdk/bin:$PATH
